--- a/problem.tex
+++ b/problem.tex
@@ -5,25 +5,21 @@
 In this paper, we consider the planning problem for a heterogeneous swarm of $N$ robots under the presence of external disturbances and model uncertainties. 
 The robots' nominal dynamics can be non-linear and there can be bounded noise in the model, capturing the effect of the disturbances and uncertainties.
 We further assume that the robots are incapable of synchronizing their actions through communication among each other during run-time.
-%We further assume that the robots interact among each other only through their environment and not directly. 
-We want to synthesize \emph{local} controllers for every robot so that the following conditions are fulfilled:
-%A correctly synthesized controller for a robot swarm system needs to ensure that 
+We want to synthesize individual feedback controllers for every robot so that the following conditions are fulfilled:
 \begin{description}
-	\item[Local specification:] Every robot starts from a designated initial state, always avoids a set of designated obstacle states, and eventually reaches a designated target state.
-	\item[Global specification:] No two robots should ever collide with each other. 
-	For the sake of simplicity, at the controller synthesis stage, we ignore the geometry of the robots and model them as point masses.
-	Then the collision avoidance requirement is formalized by requiring the robots to maintain certain minimum distance from every other robot, as if there is a bounding box around each point mass robot and we require that no two bounding boxes should ever come in contact with each other.
+	\item[Reachability:] Every robot, when positioned at a designated initial state, should eventually reach a designated target state.
+	\item[Obstacle avoidance:] No robot should collide with the given set of static obstacles.
+	\item[Collision avoidance:] No two robots should ever collide against each other.
 \end{description}
+For the sake of simplicity, at the controller synthesis stage, we ignore the geometry of the robots and model them as point masses.
+Then the collision avoidance requirement is formalized by requiring the robots to maintain certain minimum distance from every other robot, as if there is a bounding box around each point mass robot and we require that no two bounding boxes should ever come in contact with each other.
 
 %\textcolor{blue}{%We consider planning problem for multi-robot systems modelled collectively as control system $\Sigma$ with order $n=\sum_{i=1}^N n_i$. Each of $N$ robots can be represented as a control system of order $n_i$ 
 We fomalize the problem statement in the following.
 We start with the following six ingredients that are required to be provided as inputs:
 \begin{description}
 	\item[System model:] Every robot is modeled as a control system $\Sigma^i = (X^i, U^i, W^i, f^i)$ for $i\in [1;N]$. 
-	We denote the associated metric on the state space $\sem{X^i}$ by $d^i$.
 	We assume that there is a set of \emph{global state variables} $Z$ such that for every $i\in [1;N]$, $Z\subseteq X^i$.
-	We also assume that there is a metric $e$ on the set $\sem{Z}$ such that $(\sem{Z},e)$ is a metric space, and moreover, the metric $e$ agrees with $d^i$, for every $i\in [1;N]$, on the global state variables.
-	Formally, we require that for every pair $x_0,x_1\in \sem{X^i}$ with $x_0[X^i\setminus Z]\equiv x_1[X^i\setminus Z]$, we have $d^i(x_0,x_1)=e(x_0,x_1)$.
 	For every $\Sigma^i$, every state variable that is not global is called a \emph{local state variable}.
 	We assume that the set of local state variables of all the systems are pairwise disjoint. \MZ{this part is ambiguous to me. I don't understand Z}
 	\item[Sampling time:] A sampling time $\tau\in \mathbb{R}_{>0}$.
@@ -31,23 +27,18 @@ We start with the following six ingredients that are required to be provided as 
 	\item[Target states:] Every robot has a designated set of goal states $\goal^i\subseteq \sem{X^i}$  for $i\in [1;N]$.
 	\item[Static obstacles:] Every robot has a, possibly empty, set of static obstacles $\obs^i\subseteq \sem{X^i}$  for $i\in [1;N]$.
 %	\item[Global (static) obstacles:] A, possibly empty, set of global static obstacles $\avoidg\subseteq \sem{Z}$.
-	\item[Safety margins:] A pair of positive reals $\delta_{\col}$ and $\delta_{\obs}$, which denotes the required minimum distance between every two robots and the required minimum distance between every robot and the obstacles.
+	\item[Safety margins:] A collision margin $\delta_{\col}\in \mathbb{R}^{|Z|}_{>0}$ which denotes the required minimum distance between every two robots, and a set of obstacle margins $\set{\delta_{\obs,i}}_{i\in [1;N]}$, with $\delta_{\obs,i}\in \mathbb{R}^{|Z|}_{>0}$ for all $i$, which denote the required minimum distance between every robot and the obstacles.
 \end{description}
 
-%We separate out the specification in the tuple $(\set{\init^i}, \set{\goal^i}, \set{\obs^i}, \delta_\col, \delta_\obs)$.
-A set of \emph{local} feedback controllers $\set{C^i}_{i\in [1;N]}$ for the systems $\set{\Sigma_\tau^i}_{i\in [1;N]}$ \emph{realizes} the given specification $(\set{\init^i}_{i\in [1;N]}, \set{\goal^i}_{i\in [1;N]}, \set{\obs^i}_{i\in [1;N]}, \delta_\col, \delta_\obs)$, as defined above, if the following conditions are satisfied:
-
+A set of feedback controllers $\set{C^i}_{i\in [1;N]}$ for the systems $\set{\Sigma_\tau^i}_{i\in [1;N]}$ \emph{realizes} the given specification $(\set{\init^i}_{i\in [1;N]}, \set{\goal^i}_{i\in [1;N]}, \set{\obs^i}_{i\in [1;N]}, \delta_\col, \set{\delta_{\obs,i}}_{i\in [1;N]})$, as defined above, if the following conditions are satisfied:
+For \emph{every} $i\in [1;N]$ and for \emph{every} infinite behavior $(x_0^i,x_1^i,\ldots)\in \Beh^\cl(x_0^i)$ of the closed loop $C^i\parallel \Sigma_\tau^i$ starting at $x_0^i=\init^i$, there \emph{exists} a $K$ such that
 \begin{description}
-	\item[Local specification:] For \emph{every} $i\in [1;N]$ and for \emph{every} infinite behavior $(x_0,x_1,\ldots)\in \Beh^\cl(x_0)$ of the closed loop $C^i\parallel \Sigma_\tau^i$ starting at $x_0=\init^i$,
-		\begin{enumerate}
-			\item there \emph{exists} a $K$ s.t.\ $x_K\in \goal^i$ and
-			 \item for \emph{every} $k\leq K$, we have $d(x^i_k,\obs^i)>\delta_{\obs}$. 
-		\end{enumerate}
-	\item[Global specification:] 
-		Suppose $i,j\in [1;N]$ be any two arbitrary and distinct set of indices of the given systems.
-		Consider any arbitrary infinite behavior $(x_0^i,x_1^i,\ldots)\in \Beh^\cl(x_0^i)$ of $C^i\parallel \Sigma_\tau^i$ starting at $x_0^i=\init^i$ 
-		and any arbitrary infinite behavior $(x_o^j, x_1^j,\ldots)\in \Beh^\cl(x_0^j)$ of $C^j\parallel \Sigma_\tau^j$ starting at $x_0^j=\init^j$. 
-		Then for every $k\leq K$ we require the following to be satisfied: $e(x^i_k[Z],x^j_k[Z])>\delta_{\col}$.
+	\item[Reachability:] $x_K^i\in \goal^i$.
+	\item[Obstacle avoidance:] For every $k\leq K$, we have $d_{X_i}(x_k^i,\obs^i) > \delta_{\obs,i}$.
+	\item[Collision avoidance:] 
+		Suppose $j\in [1;N]$ with $j\neq i$ be some other system index.
+		Consider any arbitrary infinite behavior $(x_o^j, x_1^j,\ldots)\in \Beh^\cl(x_0^j)$ of $C^j\parallel \Sigma_\tau^j$ starting at $x_0^j=\init^j$. 
+		Then for every $k\leq K$ we require the following to be satisfied: $d_{Z}(x^i_k[Z],x^j_k[Z])>\delta_{\col}$.
 \end{description}
 
 \begin{comment} % Mahmoud's version
@@ -78,7 +69,7 @@ For a given sampling time $\tau>0$ and positive constants $\delta_{\col}$ and $\
 \end{comment}
 
 \begin{problem}\label{prob:reach-avoid}
-	Given a set of control systems $\set{\Sigma^i}_{i\in [1;N}$, a sampling time $\tau\in \mathbb{R}_{>0}$, and a specification $(\set{\init^i}_{i\in [1;N]}, \set{\goal^i}_{i\in [1;N]}, \set{\obs^i}_{i\in [1;N]}, \delta_\col, \delta_\obs)$, find a set of local controllers $\set{C_i}_{i\in [1;N]}$ for the systems $\set{\Sigma_\tau^i}_{i\in [1;N]}$ which realizes the given specification.
+	Given a set of control systems $\set{\Sigma^i}_{i\in [1;N}$, a sampling time $\tau\in \mathbb{R}_{>0}$, and a specification $(\set{\init^i}_{i\in [1;N]}, \set{\goal^i}_{i\in [1;N]}, \set{\obs^i}_{i\in [1;N]}, \delta_\col, \set{\delta_{\obs,i}}_{i\in [1;N]})$, find a set of feedback controllers $\set{C_i}_{i\in [1;N]}$ for the systems $\set{\Sigma_\tau^i}_{i\in [1;N]}$ which realize the given specification.
 \end{problem}
 
 \KM{An weird thing I noted is that the systems cannot violate their "local" obstacle avoidance specification until all the systems have reached their targets. This is stronger than a simple "until" type local specification for each robot, where it is required that the obstacles are not hit before reaching the target for the first time. This is just an observation: nothing breaks.} \MZ{"This point is needed to be discussed"}
@@ -94,28 +85,28 @@ Our approach is a two-stage procedure:
 	\item First, we deploy an off-the-shelf $\mathit{fast}$ method to quickly solve the controller synthesis problem, and obtain a set of  \emph{valid} (controlled) \emph{nominal trajectories} $\set{(x_{0_\nom}^i,\ldots,x_{K_\nom}^i)}_{i\in [1;N]}$, for the systems $\set{\Sigma_\tau^i}_{i\in [1;N]}$, such that the following conditions are met:
 	\begin{itemize}
 		\item For every $i\in [1;N]$, there exists $k\in [0;K]$, such that $x_{k_\nom}^i\in \goal^i$,
-		\item for every $i\in [1;N]$ and for every $k\in [0;K]$, $d^i(x_{k_\nom}^i,\obs^i) > \delta_\obs$, and
-		\item for every $(i,j)\in [1;N]\times [1;N]$ and for every $k\in [0;K]$, $e(x_{k_\nom}^i[X^i\cap Z], x_{k_\nom}^j[X^j\cap Z]) > \delta_\col$. \MZ{I know it is about collision avoidance but I can't understand the notation(for example why intersection with $Z$?)}
+		\item for every $i\in [1;N]$ and for every $k\in [0;K]$, $d_{X_i}(x_{k_\nom}^i,\obs^i) > \delta_{\obs,i}$, and
+		\item for every $(i,j)\in [1;N]\times [1;N]$ and for every $k\in [0;K]$, $d_{Z}(x_{k_\nom}^i[X^i\cap Z], x_{k_\nom}^j[X^j\cap Z]) > \delta_\col$. \MZ{I know it is about collision avoidance but I can't understand the notation(for example why intersection with $Z$?)}
 	\end{itemize}
 	(Essentially, a set of valid nominal trajectories is a witness trajectory for the satisfaction of the specification.)
 	While, in principle, any $\mathit{fast}$ method could be used for this first phase, in this work we solve the given problem \emph{centrally} using the tool called ALTRO \cite{howell2019altro}.
 	\item Second, for every $\Sigma^i_\tau$, for $i\in [1;N]$, we use a $\mathit{sound}$ method to compute a sound feedback controller which tracks the respective nominal trajectory of system $\Sigma^i_\tau$ up to a given precision.
 The main contribution of this paper is an efficient implementation of this second stage, which is formalized as a separate problem in the following:
 		\begin{problem}\label{prob:tracking_with_time}
-			Let $\Sigma=(X,U,W,f)$ be a control system, $\tau>0$ be a sampling time, $\goal\subseteq \sem{X}$ be a designated target set, $(x_{0_\nom},\ldots,x_{K_\nom})$ be a given finite nominal trajectory, and $\varepsilon>0$ be a precision parameter chosen in such a way that there exists a state $g\in \goal$ such that the following holds:
+			Let $\Sigma=(X,U,W,f)$ be a control system, $\tau>0$ be a sampling time, $\goal\subseteq \sem{X}$ be a designated target set, $(x_{0_\nom},\ldots,x_{K_\nom})$ be a given finite nominal trajectory, and $\varepsilon\in \mathbb{R}^{|Z|}_{>0}$ be a precision parameter chosen in such a way that there exists a state $g\in \goal$ such that the following holds:
 			\begin{equation}\label{eq:choice of eps}
-				\sup_{(x,u)\in \sem{X}\times U} \sup_{x'\in f_\tau(x,u)} d(x,x')	\leq \varepsilon \leq d(g, \sem{X}\setminus \goal). 
+				\varepsilon \leq d(g, \sem{X}\setminus \goal). 
 			\end{equation}
 			Find a feedback controller $C$ for $\Sigma_\tau$ such that 
 			% for every initial state $x_0\in X$ with $\| x_0-x_0^\nom \|\leq \varepsilon$, and 
-			for every finite trajectory $(x_{0_\nom},x_1,\ldots,x_K)$ in the closed-loop behavior $\Beh^\cl(x_{0_\nom})$ of $C \parallel \Sigma_\tau$, for every $0\leq k \leq K$, $d(x_k, x_{k_\nom}) \leq \varepsilon$.
+			for every finite trajectory $(x_{0_\nom},x_1,\ldots,x_K)$ in the closed-loop behavior $\Beh^\cl(x_{0_\nom})$ of $C \parallel \Sigma_\tau$, for every $0\leq k \leq K$, $d_X(x_k, x_{k_\nom}) \leq \varepsilon$.
 			We call such a controller $C$ a \emph{tracking} controller.
 		\end{problem}
 \end{itemize}
 
-Some discussion on \eqref{eq:choice of eps} is in order.
-The first inequality is there to ensure that $\varepsilon$ is large enough that a \emph{continuous} tube can be constructed by stitching together $\varepsilon$-neighborhoods around the sampled nominal trajectory points, as otherwise there could be ``gaps'' between some consecutive $\varepsilon$-neighborhoods. \MZ{ what is the problem with gaps ? }
-The second inequality is there to ensure that there exists a goal state, so ``deep'' within the set $\goal$, that its whole $\varepsilon$-neighborhood is included in $\goal$, so that a tracking controller surely satisfies the original specification. \MZ{with current implementation that domain includes all of the points in target set it shouldn't be a problem  }
+The inequality \eqref{eq:choice of eps} guarantees the existence of a goal state whose entire $\varepsilon$-neighborhood is included in the set $\goal$.
+This ensures that the original reachability specification can be satisfied just using the tracking controller.
+\MZ{with current implementation that domain includes all of the points in target set it shouldn't be a problem  }
 \KM{Please check! Not sure.}
 
 It is worthwhile to mention that we do not use the synthesized controllers in the first phase themselves; we only will use the nominal trajectories.
