--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
-\documentclass{llncs} 
+\documentclass[sigconf,review]{acmart} 
 
-\bibliographystyle{plainurl}
+%\bibliographystyle{plainurl}
 
 \include{preamble} % for the packages and the macros
 
@@ -16,11 +16,11 @@
 
 \begin{document}
 
-\maketitle
-
 \begin{abstract}
 	\input{abstract}
 \end{abstract}
+
+\maketitle
 
 \input{intro}
 \input{prelims}
