--- a/preamble.tex
+++ b/preamble.tex
@@ -4,6 +4,7 @@
 \usepackage{amssymb}
 \usepackage{xcolor}
 \usepackage{enumerate}
+\usepackage{amsthm}
 %\usepackage{enumitem}
 \usepackage{paralist}
 %\usepackage{amsthm}
@@ -13,6 +14,9 @@
 \usepackage{comment}
 \usepackage{mathtools}
 \usepackage{braket}
+
+% Custom environment
+\newtheorem{problem}{Problem}
 
 % comment macros
 \newcommand{\KM}[1]{{\color{red} \textbf{KM:} #1}}
