--- a/prelims.tex
+++ b/prelims.tex
@@ -7,7 +7,7 @@
 We use the notation $\mathbb{R}$ and $\mathbb{R}_{>0}$ to denote the set of real numbers and the set of positive real numbers respectively.
 We use superscript $n>0$ with $\mathbb{R}$ and $\mathbb{R}_{>0}$ to denote the cartesian product of $n$ copies of $\mathbb{R}$ and $\mathbb{R}_{>0}$ respectively.
 Given two points $x=(x_1,\ldots, x_n)$ and $y=(y_1,\ldots, y_n)$ in $ \mathbb{R}^n$ (or $\mathbb{R}^n_{>0}$) and a relational symbol $\triangleright\in \set{\leq, <, = , >, \geq}$, we write $x\triangleright y$ if for every $i=1,\ldots,n$, $x_i\triangleright y_i$.
-The symbols $|\cdot |$ and $\| \cdot \|$ denote the absolute value and the infinity norm respectively.  
+The symbol $|\cdot |$ is used to denote both the absolute value of a number and cardinality of a set, and the symbol $\| \cdot \|$ is used to denote the infinity norm.  
 
 Let $f\colon A\to B$ and $g\colon C\to D$ be two functions.
 We define the product function $f\oplus g\colon A\times C\to B\times D $, $f\oplus g \colon (a,c)\mapsto (f(a),g(c))$.
@@ -21,8 +21,8 @@ For any $v\in \sem{V}$, we use the notation $v[U]$ to denote the valuation in $\
 
 Let $V$ be a finite set of real-valued variables, as above.
 Given any two points $u,v\in \sem{V}$ with $u=(u_1,\ldots,u_{|V|})$ and $v=(v_1,\ldots,v_{|V|})$, we introduce the \emph{element-wise distance function} $d_V\colon \sem{V}\times \sem{V}\to \mathbb{R}^{|V|}_{>0} $, $d_V\colon (x,y) \mapsto (|x_1-y_1|,\ldots, |x_{|V|}-y_{|V|}|)$.
-We sometime exploit the notation and use the same $d_V$ to measure the distance between a set $W\subseteq \sem{V}$ and a point $v\in \sem{V}$ as follows:
-$d_V(v,W)= \inf_{w\in W}\set{d(v,w)}$.
+We sometime exploit the notation and use the same $d_V$ to measure the distance between a set $W\subseteq \sem{V}$ and a point $v\in \sem{V}$, which is defined as follows:
+$d_V(v,W)= (\inf_{w\in W} |v_1-w_1|, \ldots, \inf_{w\in W} |v_{|V|}-w_{|V|}|)$.
  
 \smallskip
 \noindent\textbf{Control System.}\
@@ -49,7 +49,7 @@ We collect all such solutions in the set $\Sol_\Sigma(x_0,u,\tau)$.
 \noindent\textbf{Transition System.}\
 A \emph{transition system} $S=(Y,U,\delta)$ consists of a state space $Y$, an input space $U$, and a transition function $\delta:Y\times U \rightarrow 2^Y$. 
 A system $S$ is \emph{finite} if $Y$ and $U$ are finite. 
-A trajectory $\rho\in Y^\infty$ is a maximal sequence of states compatible with $\delta$:
+A \emph{trajectory} of $S$ is a maximal sequence of states $\rho\in Y^\infty$ compatible with $\delta$:
 for all $1\leq k < |\rho|$ there exists $u\in U$ such that $\rho(k)\in \delta(\rho(k-1),u)$ and 
 if $|\rho| < \infty$ then $\delta(\rho(|\rho|),u)= \emptyset$ for all $u\in U$.
 %For $D\subseteq X$, a $D$-trajectory is a trajectory $\xi$ with $\xi(0)\in D$.
