--- a/problem.tex
+++ b/problem.tex
@@ -3,7 +3,7 @@
 \section{The Problem Statement}
 %\textcolor{blue}{
 In this paper, we consider the planning problem for a heterogeneous swarm of $N$ robots under the presence of external disturbances and model uncertainties. 
-The robots' nominal dynamics can be non-linear and there can be bounded noise in the model, capturing the effect of the disturbances and uncertainties.
+The robots' nominal dynamics can be non-linear and there can be bounded noise in the model, capturing the effect of the disturbances and model uncertainties.
 We further assume that the robots are incapable of synchronizing their actions through communication among each other during run-time.
 We want to synthesize individual feedback controllers for every robot so that the following conditions are fulfilled:
 \begin{description}
@@ -21,7 +21,7 @@ We start with the following six ingredients that are required to be provided as 
 	\item[System model:] Every robot is modeled as a control system $\Sigma^i = (X^i, U^i, W^i, f^i)$ for $i\in [1;N]$. 
 	We assume that there is a set of \emph{global state variables} $Z$ such that for every $i\in [1;N]$, $Z\subseteq X^i$.
 	For every $\Sigma^i$, every state variable that is not global is called a \emph{local state variable}.
-	We assume that the set of local state variables of all the systems are pairwise disjoint. \MZ{this part is ambiguous to me. I don't understand Z}
+	We assume that the set of local state variables of all the systems are pairwise disjoint. 
 	\item[Sampling time:] A sampling time $\tau\in \mathbb{R}_{>0}$.
 	\item[Initial states:] Every robot has a designated initial state $\init^i\in \sem{X^i}$ for $i\in [1;N]$.
 	\item[Target states:] Every robot has a designated set of goal states $\goal^i\subseteq \sem{X^i}$  for $i\in [1;N]$.
@@ -72,9 +72,9 @@ For a given sampling time $\tau>0$ and positive constants $\delta_{\col}$ and $\
 	Given a set of control systems $\set{\Sigma^i}_{i\in [1;N}$, a sampling time $\tau\in \mathbb{R}_{>0}$, and a specification $(\set{\init^i}_{i\in [1;N]}, \set{\goal^i}_{i\in [1;N]}, \set{\obs^i}_{i\in [1;N]}, \delta_\col, \set{\delta_{\obs,i}}_{i\in [1;N]})$, find a set of feedback controllers $\set{C_i}_{i\in [1;N]}$ for the systems $\set{\Sigma_\tau^i}_{i\in [1;N]}$ which realize the given specification.
 \end{problem}
 
-\KM{An weird thing I noted is that the systems cannot violate their "local" obstacle avoidance specification until all the systems have reached their targets. This is stronger than a simple "until" type local specification for each robot, where it is required that the obstacles are not hit before reaching the target for the first time. This is just an observation: nothing breaks.} \MZ{"This point is needed to be discussed"}
+%\KM{An weird thing I noted is that the systems cannot violate their "local" obstacle avoidance specification until all the systems have reached their targets. This is stronger than a simple "until" type local specification for each robot, where it is required that the obstacles are not hit before reaching the target for the first time. This is just an observation: nothing breaks.} \MZ{"This point is needed to be discussed"}
 
-We divide the available controller synthesis techniques from the existing literature into two broad categories, namely the $\mathit{fast}$ ones and the $\mathit{sound}$ ones.
+We categorize the available controller synthesis techniques from the existing literature into two broad groups, namely the $\mathit{fast}$ ones and the $\mathit{sound}$ ones.
 The $\mathit{fast}$ ones are those which are extremely efficient, but do not provide formal worst-case robustness guarantee of the controller against external disturbances \cite{howell2019altro,choset2005principles}.
 The $\mathit{sound}$ ones are those which are not so efficient, but provide strong formal guarantee on the correctness of the controller \cite{reissig2016feedback,fisac2015reach,tedrake2009lqr}.
 %In Sec.~\ref{sec:nominal trajectory} and Sec.~\ref{sec:tracking}, we propose a hierarchical solution approach for Prob.~\ref{prob:reach-avoid} that marries the $\mathit{fast}$ and the $\mathit{sound}$ solution techniques.
@@ -86,16 +86,16 @@ Our approach is a two-stage procedure:
 	\begin{itemize}
 		\item For every $i\in [1;N]$, there exists $k\in [0;K]$, such that $x_{k_\nom}^i\in \goal^i$,
 		\item for every $i\in [1;N]$ and for every $k\in [0;K]$, $d_{X_i}(x_{k_\nom}^i,\obs^i) > \delta_{\obs,i}$, and
-		\item for every $(i,j)\in [1;N]\times [1;N]$ and for every $k\in [0;K]$, $d_{Z}(x_{k_\nom}^i[X^i\cap Z], x_{k_\nom}^j[X^j\cap Z]) > \delta_\col$. \MZ{I know it is about collision avoidance but I can't understand the notation(for example why intersection with $Z$?)}
+		\item for every $(i,j)\in [1;N]\times [1;N]$ and for every $k\in [0;K]$, $d_{Z}(x_{k_\nom}^i[X^i\cap Z], x_{k_\nom}^j[X^j\cap Z]) > \delta_\col$. 
 	\end{itemize}
 	(Essentially, a set of valid nominal trajectories is a witness trajectory for the satisfaction of the specification.)
 	While, in principle, any $\mathit{fast}$ method could be used for this first phase, in this work we solve the given problem \emph{centrally} using the tool called ALTRO \cite{howell2019altro}.
-	\item Second, for every $\Sigma^i_\tau$, for $i\in [1;N]$, we use a $\mathit{sound}$ method to compute a sound feedback controller which tracks the respective nominal trajectory of system $\Sigma^i_\tau$ up to a given precision.
+	\item Second, for every $\Sigma^i_\tau$, for $i\in [1;N]$, we use a $\mathit{sound}$ method to compute a sound feedback controller which \emph{tracks} the respective nominal trajectory of system $\Sigma^i_\tau$ up to a given precision.
 The main contribution of this paper is an efficient implementation of this second stage, which is formalized as a separate problem in the following:
 		\begin{problem}\label{prob:tracking_with_time}
-			Let $\Sigma=(X,U,W,f)$ be a control system, $\tau>0$ be a sampling time, $\goal\subseteq \sem{X}$ be a designated target set, $(x_{0_\nom},\ldots,x_{K_\nom})$ be a given finite nominal trajectory, and $\varepsilon\in \mathbb{R}^{|Z|}_{>0}$ be a precision parameter chosen in such a way that there exists a state $g\in \goal$ such that the following holds:
+			Let $\Sigma=(X,U,W,f)$ be a control system, $\tau>0$ be a sampling time, $\goal\subseteq \sem{X}$ be a designated target set, $(x_{0_\nom},\ldots,x_{K_\nom})$ be a given finite nominal trajectory, and $\varepsilon\in \mathbb{R}^{|X|}_{>0}$ be a precision parameter chosen in such a way that there exists a state $g\in \goal$ such that the following holds:
 			\begin{equation}\label{eq:choice of eps}
-				\varepsilon \leq d(g, \sem{X}\setminus \goal). 
+				\varepsilon \leq d_X(g, \sem{X}\setminus \goal). 
 			\end{equation}
 			Find a feedback controller $C$ for $\Sigma_\tau$ such that 
 			% for every initial state $x_0\in X$ with $\| x_0-x_0^\nom \|\leq \varepsilon$, and 
@@ -109,8 +109,8 @@ This ensures that the original reachability specification can be satisfied just 
 \MZ{with current implementation that domain includes all of the points in target set it shouldn't be a problem  }
 \KM{Please check! Not sure.}
 
-It is worthwhile to mention that we do not use the synthesized controllers in the first phase themselves; we only will use the nominal trajectories.
-Then one could argue that, instead of using a fast \emph{controller synthesis} method to generate nominal trajectories, one could simply employ fast \emph{planners} \cite{rrt etc.} to generate a geometric plan.
+It is worthwhile to mention that the controllers synthesized in the first phase, using $\mathit{fast}$ methods, are not directly used by the second phase; rather only the nominal trajectories are used.
+Then one could argue that, instead of using a fast \emph{controller synthesis} method to generate nominal trajectories, one could simply employ fast \emph{planners} \cite{rrt etc.} to generate geometric plans.
 However, since geometric planners do not take into consideration the dynamics and control constraints, so, in our experience, the generated plans (i.e.\ the nominal trajectories) are often doomed to be infeasible for certain class of systems.
 
 The two solution stages are presented in Sec.~\ref{sec:nominal trajectory} and Sec.~\ref{sec:tracking} respectively.
